--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   app:
     build: .
@@ -12,6 +11,20 @@ services:
       - DB_PORT=${DB_PORT}
     depends_on:
       - postgres
+
+  frontend:
+    build: 
+      context: ./react
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./react:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=http://localhost:8080  # เพิ่ม API URL สำหรับ frontend
+    depends_on:
+      - app
 
   postgres:
     image: postgres:15-alpine
