--- a/react/package.json
+++ b/react/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "lucide-react": "^0.468.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "recharts": "^2.14.1",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
