--- a/react/package.json
+++ b/react/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.14.1",
     "tailwindcss": "^3.4.15"
