--- a/react/package.json
+++ b/react/package.json
@@ -19,7 +19,8 @@
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.14.1",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
