--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "react-icons": "^5.3.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "zustand": "^5.0.3"
   }
 }
