--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "flowbite-react": "^0.10.2",
     "lucide-react": "^0.468.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
@@ -20,7 +21,8 @@
     "react-router-dom": "^6.28.0",
     "recharts": "^2.14.1",
     "tailwindcss": "^3.4.15",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
