--- a/react/package.json
+++ b/react/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.28.0",
     "recharts": "^2.14.1",
     "tailwindcss": "^3.4.15",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
