--- a/react/package.json
+++ b/react/package.json
@@ -22,6 +22,7 @@
     "recharts": "^2.14.1",
     "tailwindcss": "^3.4.15",
     "ws": "^8.18.0",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
