Refactor roles, WebSocket authentication, and API key handling
- Replace 'chef' role with 'owner' in models and user management
- Update WebSocket middleware to support dynamic key type authentication
- Add PrinterAPIKeyMiddleware for printer-specific API key validation
- Enhance environment variable handling for WebSocket keys
- Add authorization middleware to various routes
- Update React user management to reflect role changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - DB_HOST=postgres
       - DB_PORT=${DB_PORT}
       - WS_TABLE_KEY=${WS_TABLE_KEY}
-      - WS_PRINTER_KEY=${ws_key_printer_123}
+      - WS_PRINTER_KEY=${WS_PRINTER_KEY}
     depends_on:
       - postgres
 
