Add recommended menu feature and notification system improvements
- Implement recommended menu functionality in menu management
- Add WebSocket-based notification system for staff
- Create new API endpoints for managing recommended menu items
- Enhance notification handling with acknowledgment and status tracking
- Update database models to support recommended menu and notification features
- Improve React components to display and interact with recommended menus and notifications

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_HOST=postgres
       - DB_PORT=${DB_PORT}
-      - WS_TABLE_KEY=${WS_TABLE_KEY}
-      - WS_PRINTER_KEY=${WS_PRINTER_KEY}
+      - WS_TABLE_KEY=ws_key_1234567890
+      - WS_PRINTER_KEY=ws_key_printer_123
     depends_on:
       - postgres
 
