--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.14.1",
     "tailwindcss": "^3.4.15",
