Add WebSocket staff key and environment variable support
- Update docker-compose.yml to use environment variables for WebSocket keys
- Modify Section.jsx to log and use WebSocket staff key
- Enhance WebSocket connection handling with logging and error tracking
- Update utility/utils.go to improve API key initialization and logging
- Add WebSocket API key middleware for staff WebSocket connections
- Refactor routes to require API key for staff WebSocket endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_HOST=postgres
       - DB_PORT=${DB_PORT}
-      - WS_TABLE_KEY=ws_key_1234567890
-      - WS_PRINTER_KEY=ws_key_printer_123
+      - WS_TABLE_KEY=${WS_TABLE_KEY}
+      - WS_PRINTER_KEY=${WS_PRINTER_KEY}
+      - WS_STAFF_KEY=${WS_STAFF_KEY}
     depends_on:
       - postgres
 
@@ -27,7 +28,8 @@ services:
     environment:
       - VITE_API_URL=http://localhost:8080
       - VITE_WS_TABLE_KEY=${VITE_WS_TABLE_KEY}
-      - VITE_WS_PRINTER_KEY=${VITE_WS_PRINTER_KEY}
+      - VITE_APP_WS_PRINTER_KEY=${VITE_APP_WS_PRINTER_KEY}
+      - VITE_APP_WS_STAFF_KEY=${VITE_APP_WS_STAFF_KEY}
     depends_on:
       - app
 
