Enhance promotion management with new API endpoints and frontend features
- Add new API endpoints for deleting and adding promotion items
- Update promotion handlers to support more detailed multilingual descriptions
- Modify Promotions component to support editing promotion items dynamically
- Implement frontend functionality for adding, editing, and deleting promotion items
- Refactor routes to require manager role for promotion-related operations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - WS_TABLE_KEY=${WS_TABLE_KEY}
       - WS_PRINTER_KEY=${WS_PRINTER_KEY}
       - WS_STAFF_KEY=${WS_STAFF_KEY}
+      - POS_JWT_SECRET=${POS_JWT_SECRET}
     depends_on:
       - postgres
 
