Enhance JWT secret key management and route authorization
- Add JWT_SECRET_KEY environment variable support in docker-compose.yml
- Implement GetJWTSecretKey() function in loginHandlers.go to dynamically retrieve secret key
- Update routes to add role-based authorization for various endpoints
- Modify logout functionality in Section.jsx to clear local storage
- Refactor token verification methods to use centralized secret key retrieval
- Add more granular access control for different API routes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - WS_PRINTER_KEY=${WS_PRINTER_KEY}
       - WS_STAFF_KEY=${WS_STAFF_KEY}
       - POS_JWT_SECRET=${POS_JWT_SECRET}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
     depends_on:
       - postgres
 
