--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - WS_STAFF_KEY=${WS_STAFF_KEY}
       - POS_JWT_SECRET=${POS_JWT_SECRET}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - VITE_APP_API_URL=${VITE_APP_API_URL}
+      - VITE_APP_WS_URL=${VITE_APP_WS_URL}
     depends_on:
       - postgres
 
@@ -28,10 +30,11 @@ services:
       - ./react:/app
       - /app/node_modules
     environment:
-      - VITE_API_URL=http://localhost:8080
+      - VITE_APP_API_URL=${VITE_APP_API_URL}
       - VITE_WS_TABLE_KEY=${VITE_WS_TABLE_KEY}
       - VITE_APP_WS_PRINTER_KEY=${VITE_APP_WS_PRINTER_KEY}
       - VITE_APP_WS_STAFF_KEY=${VITE_APP_WS_STAFF_KEY}
+      - VITE_APP_WS_URL=${VITE_APP_WS_URL}
     depends_on:
       - app
 
