--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,11 @@ services:
     build: 
       context: ./react
       dockerfile: Dockerfile
-    ports:
-      - "5173:5173"
-    volumes:
-      - ./react:/app
-      - /app/node_modules
+    # ports:
+    #   - "5173:5173"
+    # volumes:
+    #   - ./react:/app
+    #   - /app/node_modules
     environment:
       - VITE_APP_API_URL=${VITE_APP_API_URL}
       - VITE_WS_TABLE_KEY=${VITE_WS_TABLE_KEY}
@@ -36,6 +36,16 @@ services:
       - VITE_APP_WS_STAFF_KEY=${VITE_APP_WS_STAFF_KEY}
       - VITE_APP_WS_URL=${VITE_APP_WS_URL}
     depends_on:
+      - app
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - frontend
       - app
 
   postgres:
