--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,14 +39,17 @@ services:
       - app
 
   nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - frontend
-      - app
+      image: nginx:alpine
+      ports:
+        - "80:80"
+        - "443:443"
+      volumes:
+        - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+        - /etc/letsencrypt/live/grandkaze.com/fullchain.pem:/etc/ssl/certs/fullchain.pem
+        - /etc/letsencrypt/live/grandkaze.com/privkey.pem:/etc/ssl/certs/privkey.pem
+      depends_on:
+        - frontend
+        - app
 
   postgres:
     image: postgres:15-alpine
