--- a/nginx/nginx/nginx.conf
+++ b/nginx/nginx/nginx.conf
@@ -1,7 +1,16 @@
 server {
     listen 80;
-    
-    # Frontend
+    server_name grandkaze.com;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name grandkaze.com;
+
+    ssl_certificate /etc/ssl/certs/fullchain.pem;
+    ssl_certificate_key /etc/ssl/certs/privkey.pem;
+
     location / {
         proxy_pass http://frontend:80;
         proxy_http_version 1.1;
@@ -11,7 +20,6 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Backend API
     location /api/ {
         proxy_pass http://app:8080/;
         proxy_http_version 1.1;
@@ -19,5 +27,13 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+    }
+
+    location /ws {
+        proxy_pass http://app:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
     }
 }
