--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   app:
     build: .
@@ -24,12 +25,11 @@ services:
     build: 
       context: ./react
       dockerfile: Dockerfile
-    # ports:
-    #   - "5173:5173"
-    # volumes:
-    #   - ./react:/app
-    #   - /app/node_modules
+    container_name: react
+    ports:
+      - "3000:3000"
     environment:
+      - CHOKIDAR_USEPOLLING=true
       - VITE_APP_API_URL=${VITE_APP_API_URL}
       - VITE_WS_TABLE_KEY=${VITE_WS_TABLE_KEY}
       - VITE_APP_WS_PRINTER_KEY=${VITE_APP_WS_PRINTER_KEY}
@@ -39,17 +39,20 @@ services:
       - app
 
   nginx:
-      image: nginx:alpine
-      ports:
-        - "80:80"
-        - "443:443"
-      volumes:
-        - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-        - /etc/letsencrypt/live/grandkaze.com/fullchain.pem:/etc/ssl/certs/fullchain.pem
-        - /etc/letsencrypt/live/grandkaze.com/privkey.pem:/etc/ssl/certs/privkey.pem
-      depends_on:
-        - frontend
-        - app
+    image: nginx:alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      # ใช้ไฟล์ nginx.conf ที่เตรียมไว้ (วางใน ./nginx/nginx.conf)
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      # mount โฟลเดอร์ build ของ React
+      - ./react/build:/usr/share/nginx/html:ro
+      # mount โฟลเดอร์ใบรับรอง SSL
+      - ./ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - app
 
   postgres:
     image: postgres:15-alpine
