--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -8,7 +8,10 @@ RUN npm run build
 
 # Production stage
 FROM nginx:alpine
+# คัดลอกไฟล์ static จาก build stage
 COPY --from=build /app/dist /usr/share/nginx/html
+# คัดลอกไฟล์ nginx.conf ที่ปรับแต่งไว้
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+# เปิดพอร์ตทั้ง HTTP และ HTTPS
+EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
