--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -11,7 +11,7 @@ FROM nginx:alpine
 # คัดลอกไฟล์ static จาก build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 # คัดลอกไฟล์ nginx.conf ที่ปรับแต่งไว้
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 # เปิดพอร์ตทั้ง HTTP และ HTTPS
 EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
